# sphinx-longmd

./: CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  changelog.html  configuration.html  contributing.html  dialect.html  genindex.html  index.html  install.html  license.html  limitations.html  make.bat  objects.inv  output.html  pyproject.toml  run_tests.sh  search.html  searchindex.js  usage.html
.github/workflows/: static.yml
_sources/: contributing.rst.txt  install.rst.txt  limitations.rst.txt  usage.rst.txt
_static/: alabaster.css  brand.css
docs/: sample_conf.py
source/: changelog.rst  conf.py  configuration.rst  dialect.md  index.rst  license.rst  output.rst
src/sphinx_longmd/: __init__.py  anchors.py  assemble.py  assets.py  builder.py  context.py  diagnostics.py  sidecar.py
src/sphinx_longmd/emit/: __init__.py  fallback.py  inline.py  objects.py  sphinx_blocks.py  structural.py  writer.py
tests/: conftest.py  test_anchors.py  test_assets.py  test_builder_smoke.py  test_emitters.py  test_phase2.py  test_phase3.py  test_sidecar.py
tests/fixtures/basic_mixed_source/: api.rst  conf.py  index.rst  intro.md
tests/fixtures/custom_nodes/: conf.py  conf_strict.py  custom.rst  edge_cases.rst  index.rst
tests/fixtures/custom_nodes/_ext/: __init__.py  fake_card.py
tests/fixtures/objects_and_glossary/: admonitions.rst  conf.py  glossary_page.rst  index.rst  objects.rst  tables_and_figures.rst
